<resources>
    <string name="app_name">有料</string>
    <string name="action_share">分享内容</string>
    <string name="action_collect">加入收藏</string>
    <string name="action_collect_remove">取消收藏</string>

    <string name="tab0">爆料</string>
    <string name="tab1">淘图</string>
    <string name="tab2">速播</string>
    <string name="tab3">我的</string>

    <string name="list_no_more">没有数据了</string>

    <string name="txt_all_categorys">全部分类</string>

    <string name="mine_menu_news">收藏的新闻</string>
    <string name="mine_menu_image">收藏的美图</string>
    <string name="mine_menu_about">关注有料</string>

    <string name="mine_name_def">资深收藏家</string>
    <string name="mine_tag_def">你的是我的，我的还是我的。</string>
</resources>
