<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="14dp"
        android:paddingLeft="18dp"
        android:paddingTop="14dp">

        <ImageView
            android:id="@+id/ivHead"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_user_head_default" />

        <TextView
            android:id="@+id/tvName"
            style="@style/txtStrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ivHead"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/ivHead"
            android:text="@string/mine_name_def" />

        <TextView
            android:id="@+id/tvNote"
            style="@style/txtSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvName"
            android:layout_below="@+id/tvName"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_frame_green"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/mine_tag_def" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnNews"
        style="@style/txtMiddle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/def_margin"
        android:background="@drawable/bg_touch"
        android:drawableLeft="@drawable/ic_news"
        android:drawablePadding="8dp"
        android:drawableRight="@drawable/ic_arrow_right"
        android:paddingLeft="@dimen/large_padding"
        android:paddingRight="@dimen/def_padding"
        android:text="@string/mine_menu_news" />

    <Button
        android:id="@+id/btnImages"
        style="@style/txtMiddle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/bg_touch"
        android:drawableLeft="@drawable/ic_images"
        android:drawablePadding="8dp"
        android:drawableRight="@drawable/ic_arrow_right"
        android:paddingLeft="@dimen/large_padding"
        android:paddingRight="@dimen/def_padding"
        android:text="@string/mine_menu_image" />

    <Button
        android:id="@+id/btnAbout"
        style="@style/txtMiddle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/def_margin"
        android:background="@drawable/bg_touch"
        android:drawableLeft="@drawable/ic_about"
        android:drawablePadding="8dp"
        android:drawableRight="@drawable/ic_arrow_right"
        android:paddingLeft="@dimen/large_padding"
        android:paddingRight="@dimen/def_padding"
        android:text="@string/mine_menu_about" />

</LinearLayout>